src/less/main.less
/* ... */
/* =========================================================================
   Payment Methods
   ========================================================================= */
.braintree-method {
  align-items: center;
  background-color: white;
  border-color: @border-color;
  border-style: solid;
  border-width: 0 1px 1px 1px;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  margin: 0 auto;
  padding: 14px 10px;
  position: relative;
  transition: opacity 300ms, width 200ms @curve-easeOutBack, border-color 300ms, border-radius 300ms;
  width: 98%;
  z-index: 0;

  &:hover .braintree-method__label {
    font-weight: 500;
  }

  &:first-child {
    border-radius: @radius-default @radius-default 0 0;
    border-top-width: 1px;
  }

  &:last-child {
    border-radius: 0 0 @radius-default @radius-default;
  }

  &:only-child {
    border-radius: @radius-default;
  }

  .braintree-method__logo {
    align-items: center;
    display: flex;
    justify-content: center;
  }

  .braintree-method__label {
    color: @text-color;
    flex-grow: 1;
    font-size: 16px;
    margin-left: 20px;
    text-align: left;
    text-overflow: ellipsis;
    overflow: hidden;

    .braintree-method__label--small {
      font-size: 13px;
      font-weight: normal;
    }
  }

  .braintree-method__icon {
    background-color: @background-color;
    border-radius: 100px;
    fill: @background-color;
    height: 41px;
    width: 41px;
    padding: 10px;
    transform: scale(0);
    transition: transform 300ms @curve-easeOutBack;

    svg {
      width: 100%;
    }
  }
}

.braintree-methods--edit .braintree-method {
  cursor: auto;
}

.braintree-methods--active:not(.braintree-methods--edit) .braintree-method--active {
  border-radius: 5px;
  opacity: 1;
  width: 100%;
  z-index: 1;
  border-color: #219653;
  border-width: 2px;
  margin-top: -1px;
  margin-bottom: -1px;

  &:first-of-type {
    margin-top: 0;
  }

  &:last-of-type {
    margin-bottom: 0;
  }

  .braintree-method__check {
    background-color: @highlight-color;
  }

  .braintree-method__icon {
    fill: white;
    transform: scale(1);
  }

  .braintree-method__label {
    font-weight: bold;
  }
}

.braintree-method__delete-container {
  display: none;

  .braintree-method__delete {
    margin-right: 19px;
    height: 30px;
    width: 30px;
    padding: 7px;
    background-color: @delete-color;
    cursor: pointer;

    &:hover {
      background-color: darken(@delete-color, 15%);
      transform: scale(1.1);
    }


    svg {
      margin-top: -5px;
      margin-left: 1px;
    }
  }
}

.braintree-methods--edit {
  .braintree-method__delete-container {
    display: block;

    .braintree-method__delete {
      transform: scale(1);
    }
  }
}

.braintree-methods {
  display: none;
  margin: 0 auto 6px auto;
}

.braintree-delete-confirmation {
  display: none;
  overflow: hidden;
  background: #FAFAFA !important;
  color: #606060;
  font-size: 1.125em;

  [data-braintree-id="delete-confirmation__message"] {
    padding: 2.5em;
    text-align: center;
  }

  .braintree-delete-confirmation__button-container {
    display: flex;
    text-align: center;

    .braintree-delete-confirmation__button {
      border: none;
      border-top: 1px solid #B5B5B5;
      font-size: 1em;
      background: #FAFAFA;
      color: #C4C4C4;
      cursor: pointer;
      flex-grow: 2;
      padding: 0.75em;
    }

    [data-braintree-id="delete-confirmation__yes"] {
      color: white;
      background: @delete-color;
      border-left: solid 1px #b5b5b5;

      &:hover {
        background: darken(@delete-color, 15%);
      }
    }

    [data-braintree-id="delete-confirmation__no"] {
      color: @black-40;
      border-bottom-left-radius: 0.25em;

      &:hover {
        background: darken(@background-hover, 5%);
      }
    }
  }
}

.braintree-methods-initial {
  display: none;
  max-height: 0;
  opacity: 0;
}

.braintree-large-button {
  background: @background-color;
  border-radius: @radius-default;
  color: @text-color;
  cursor: pointer;
  font-size: 14px;
  margin: 0 auto;
  padding: 18px;
  text-align: center;
  width: 100%;

  &:hover {
    background: @background-hover;
    font-weight: 500;
  }

  &:hover span {
    border-color: black;
  }

  span {
    border-bottom: 1px solid @border-color;
    padding-bottom: 1px;
  }

  &.braintree-hidden {
    display: none;
  }
}

/* =========================================================================
   Dropin Visibility States
   ========================================================================= */
.braintree-show-card .braintree-card,
.braintree-show-methods .braintree-methods,
.braintree-show-delete-confirmation .braintree-delete-confirmation,
.braintree-show-options .braintree-options,
.braintree-show-paypal .braintree-paypal,
.braintree-show-paypalCredit .braintree-paypalCredit,
.braintree-show-applePay .braintree-applePay,
.braintree-show-googlePay .braintree-googlePay,
.braintree-show-venmo .braintree-venmo {
  display: block;
  height: auto;
  overflow: visible;
  visibility: visible;
}


[data-braintree-id='methods-label'],
[data-braintree-id='methods-edit'],
[data-braintree-id='choose-a-way-to-pay'] {
  position: absolute;
  transform: translateY(30px);
  transition: transform 200ms ease;
  visibility: hidden;
}

.braintree-show-methods [data-braintree-id='methods-label'],
.braintree-show-methods [data-braintree-id='methods-edit'],
.braintree-show-options [data-braintree-id='choose-a-way-to-pay'] {
  transform: none;
  visibility: visible;
}

.braintree-show-methods [data-braintree-id='methods-edit'] {
  right: 5px;
  text-decoration: underline;
  cursor: pointer;
}

.braintree-show-methods [data-braintree-id='methods-label'].braintree-no-payment-method-selected {
  transform: translateY(30px);
}

.braintree-show-methods.braintree-show-options [data-braintree-id='choose-a-way-to-pay'] {
  transform: translateY(30px);
  visibility: hidden;
}
/* ... */

